# cir-tac

./: .pre-commit-config.yaml  .releaserc.json  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_proto_files.py  downloadCompilers.sh  main.c  main.cpp  model.proto  run_ser_deser_cycle.py
.github/workflows/: build-clangir.yml  build.yml  build_clangir_docker_linux.yml  build_clangir_docker_linux_legacy.yml  build_clangir_docker_macos.yml  build_clangir_images.yml  ci.yml  clangir-version.json  cmp_cirs.py  get_failing_tests.py  gsac-test.yml  juliet-c-test.yml  pr-title.yml  pre-commit.yml  release.yml  run-test-suite.yml  run_gsac_tests.py  run_test_suite.py  tblgen-check.yml  utils.py
docker/: Dockerfile  DockerfileMacOS  DockerfileUbuntuLegacy  buildClangir.sh
include/: CIRInstOpCode.h
include/CAPI/: CIR.h  CIRContext.h  CIRFunction.h  CIRFunctionAPI.h  CIRInst.h  CIRInstAPI.h  CIRModule.h  CIRModuleAPI.h  CIRType.h  CIRTypeAPI.h  README.md
include/CXX/: CIRFunction.h  CIRInst.h  CIRModule.h  CIRReader.h  CIRType.h
include/Tools/cir-tblgen/: CirTblgenMain.h
include/cir-tac/: AttrDeserializer.h  AttrSerializer.h  Deserializer.h  EnumDeserializer.h  EnumSerializer.h  EnumsSerializer.h  EnumsSerializerGen.h  OpDeserializer.h  OpSerializer.h  Serializer.h  TypeSerializer.h  Util.h
proto/: CMakeLists.txt  attr.proto  enum.proto  enumgen.proto  model.proto  op.proto  op.proto.inc  opgen.proto  setup.proto  type.proto
scripts/: build_proto_files.py  build_source_files.py  cir_tblgen_util.py  cmp_tblgen_files.py  cpp_gen_defs.csv  gen_shorthand_tds.py  gen_source_defs.py  run_ser_deser_cycle.py
scripts/workflow/: run_test_suite.py
src/: AttrDeserializer.cpp  AttrSerializer.cpp  CIRFunction.cpp  CIRInst.cpp  CIRModule.cpp  CIRReader.cpp  CIRType.cpp  CMakeLists.txt  Deserializer.cpp  EnumDeserializer.cpp  EnumSerializer.cpp  EnumsSerializerGen.cpp  OpDeserializer.cpp  OpSerializer.cpp  Serializer.cpp  SerializerGen.cpp  TypeSerializer.cpp
src/CAPI/: CIR.cpp  CIRAllocaOp.cpp  CIRCallOp.cpp  CIRFunction.cpp  CIRLoadOp.cpp  CIRModule.cpp  CIRReturnOp.cpp  CIRStoreOp.cpp  CIRType.cpp  CMakeLists.txt
tools/: CMakeLists.txt
tools/cir-deser-proto/: CMakeLists.txt  cir-deser-proto.cpp
tools/cir-ser-proto/: CMakeLists.txt  cir-ser-proto.cpp  parse-test.cpp
tools/cir-tac-tblgen/: AttrGen.cpp  CMakeLists.txt  Common.cpp  Common.h  EnumGen.cpp  GenHelpers.cpp  GenHelpers.h  OpGen.cpp  TypeGen.cpp  VespaAttrGen.cpp  VespaCommon.cpp  VespaCommon.h  VespaEnumGen.cpp  VespaGen.cpp  VespaGen.h  VespaOpGen.cpp  VespaTypeGen.cpp  cir-tac-tblgen.cpp
tools/cir-tblgen/: CMakeLists.txt  cir-tblgen.cpp
